--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -58,6 +58,7 @@ body header ul li:hover {
 }
 
 body main {
+  font-size: 14px;
   text-align: center;
   overflow: hidden;
   max-width: 992px;
@@ -72,6 +73,19 @@ body main li {
 body main img {
   object-fit: cover;
   height: 100px;
+  border: solid 1px white;
+}
+
+body main .gallery {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+body main .gallery-item {
+  object-fit: cover;
+  height: 200px;
+  width: 200px;
+  margin: 5px;
 }
 
 body main th {
