--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -72,6 +72,7 @@ body {
   }
 
   main {
+    font-size: 14px;
     text-align: center;
     overflow: hidden;
     max-width: 992px;
@@ -85,6 +86,19 @@ body {
     img {
       object-fit: cover;
       height: 100px;
+      border: solid 1px white;
+    }
+
+    .gallery {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .gallery-item {
+      object-fit: cover;
+      height: 200px;
+      width: 200px;
+      margin: 5px;
     }
 
     th {
