--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -10,6 +10,7 @@ body a, body a:link, body a:visited, body a:hover, body a:active {
 }
 
 body .hero {
+  z-index: -1;
   overflow: hidden;
   position: fixed;
   top: 0;
