--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -72,6 +72,22 @@ body main {
   margin-right: auto;
 }
 
+body main .wrap {
+  width: 100%;
+  height: 0;
+  position: relative;
+  padding-top: 56.25%;
+  overflow: hidden;
+}
+
+body main .wrap iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
+
 body main li {
   text-align: initial;
 }
@@ -80,6 +96,11 @@ body main img {
   object-fit: cover;
   height: 100px;
   border: solid 1px white;
+}
+
+body main img:hover {
+  transition: transform 0.3s;
+  transform: scale(1.02);
 }
 
 body main .gallery {
