--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -85,6 +85,23 @@ body {
     margin-left: auto;
     margin-right: auto;
 
+    // 埋め込み用
+    .wrap {
+      width: 100%;
+      height: 0;
+      position: relative;
+      padding-top: 56.25%;
+      overflow: hidden;
+
+      iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100% !important;
+        height: 100% !important;
+      }
+    }
+
     li {
       text-align: initial;
     }
@@ -93,6 +110,10 @@ body {
       object-fit: cover;
       height: 100px;
       border: solid 1px white;
+      &:hover {
+        transition: transform 0.3s;
+        transform: scale(1.02);
+      }
     }
 
     .gallery {
