--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -71,6 +71,7 @@ body main {
   max-width: 992px;
   margin-left: auto;
   margin-right: auto;
+  max-width: 950px;
 }
 
 body main .wrap {
@@ -123,7 +124,7 @@ body main .gallery-item {
 }
 
 body main th {
-  width: 50px;
+  width: 100px;
 }
 
 body footer {
@@ -137,4 +138,5 @@ body footer {
   box-sizing: border-box;
   z-index: 20;
   position: fixed;
+  background: black;
 }
