--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -85,6 +85,7 @@ body {
     max-width: 992px;
     margin-left: auto;
     margin-right: auto;
+    max-width: 950px;
 
     // 埋め込み用
     .wrap {
@@ -138,7 +139,7 @@ body {
     }
 
     th {
-      width: 50px;
+      width: 100px;
     }
   }
 
@@ -153,5 +154,6 @@ body {
     box-sizing: border-box;
     z-index: 20;
     position: fixed;
+    background: black;
   }
 }
